--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,9 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 virtualenv==20.26.1
 zipp==3.20.1
+psutil==7.0.0
+cffi==1.17.1
+cryptography==44.0.2
+pycparser==2.22
+pycryptodomex==3.22.0
+pyzipper==0.3.6
