--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,37 @@
+asgiref==3.8.1
 certifi==2024.2.2
+cffi==1.17.1
+charset-normalizer==3.3.2
+cryptography==44.0.2
+distlib==0.3.8
 Django==4.2.15
 django-cors-headers==4.4.0
 django-environ==0.11.2
 djangorestframework==3.15.2
-python-dotenv==1.0.1
-requests==2.32.3
-urllib3==2.3.0
+env==0.1.0
+filelock==3.14.0
+gunicorn==23.0.0
+idna==3.10
+importlib_resources==6.4.4
+kiwisolver==1.4.5
+lz4==4.3.3
+numpy==2.0.2
+packaging==24.1
+pipdeptree==2.23.4
+pipenv==2023.12.1
+platformdirs==4.2.1
 psutil==7.0.0
-cryptography==44.0.2
+pycparser==2.22
+pycryptodomex==3.22.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pyzipper==0.3.6
+requests==2.32.3
+six==1.16.0
+sqlitecloud==0.0.83
+sqlparse==0.5.1
+typing_extensions==4.12.2
+urllib3==1.26.15
+virtualenv==20.26.1
+zipp==3.20.1
